25-03-02【功能新增】: 框架maven依赖整理